force-app/main/default/objects/Time_Slot_For_Handover__c/Time_Slot_For_Handover__c.object-meta.xml
<CustomObject>
    <label>Time Slot For Handover</label>
    <nameField>
        <displayFormat>HO - {0000}</displayFormat>
        <label>Time Slot For  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Slot For Handover</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>