force-app/main/default/objects/Time_Slot_For_Handover__c/fields/Applicable_Offers__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Offers__c</fullName>
    <formula>Booking__r.Applicable_Offers__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicable Offers</label>
    <type>Text</type>
</CustomField>