force-app/main/default/objects/Time_Slot_For_Handover__c/fields/Balacony_Area__c.field-meta.xml
<CustomField>
    <fullName>Balacony_Area__c</fullName>
    <formula>Booking__r.Unit__r.Balcony_Area_Sq_Ft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balacony Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>