force-app/main/default/objects/Time_Slot_For_Handover__c/fields/Bank_Valuation_Date__c.field-meta.xml
<CustomField>
    <fullName>Bank_Valuation_Date__c</fullName>
    <label>Bank Valuation Date</label>
    <type>Date</type>
</CustomField>