force-app/main/default/objects/Time_Slot_For_Handover__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Time Slot For Handover</relationshipLabel>
    <relationshipName>Time_Slot_For_Handover</relationshipName>
    <type>Lookup</type>
</CustomField>