force-app/main/default/objects/Time_Slot_For_Handover__c/fields/Booking_Tower__c.field-meta.xml
<CustomField>
    <fullName>Booking_Tower__c</fullName>
    <formula>Booking__r.Tower__c</formula>
    <label>Booking Tower</label>
    <type>Text</type>
</CustomField>