force-app/main/default/objects/Time_Slot_For_Handover__c/fields/Chargeable_Area__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_Area__c</fullName>
    <formula>Booking__r.Unit__r.Chargeable_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chargeable Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>