force-app/main/default/objects/Time_Slot_For_Handover__c/fields/CRM_Excutive__c.field-meta.xml
<CustomField>
    <fullName>CRM_Excutive__c</fullName>
    <label>CRM Executive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sunny Pradhan</fullName>
            </value>
            <value>
                <fullName>Ahmed Yossry</fullName>
            </value>
            <value>
                <fullName>Nisha Krishnan</fullName>
            </value>
            <value>
                <fullName>Racha Dannaoui</fullName>
            </value>
            <value>
                <fullName>Usman Sheikh</fullName>
            </value>
            <value>
                <fullName>Ali Yousuf Abdulla Qassem Alemadi</fullName>
            </value>
            <value>
                <fullName>Priyanka Binil</fullName>
            </value>
            <value>
                <fullName>Sahar Sultan</fullName>
            </value>
            <value>
                <fullName>Laila Nadeer</fullName>
            </value>
            <value>
                <fullName>Abdelrahman Salim Rashid Alzumr Al-Ali</fullName>
            </value>
            <value>
                <fullName>Deeksha Poral Lakshminarayana</fullName>
            </value>
            <value>
                <fullName>Hadi osama hussain mohamed ghanem</fullName>
            </value>
            <value>
                <fullName>Malak Saleh</fullName>
            </value>
            <value>
                <fullName>Juma Khalfan Juma Humaid Al-Ali</fullName>
            </value>
            <value>
                <fullName>Ummer Farhan</fullName>
            </value>
            <value>
                <fullName>Roopa Nataraj</fullName>
            </value>
            <value>
                <fullName>Divya Shanthigrama Keshava</fullName>
            </value>
            <value>
                <fullName>Priya Rathi</fullName>
            </value>
            <value>
                <fullName>Aruna</fullName>
            </value>
            <value>
                <fullName>Davood Sheikh</fullName>
            </value>
            <value>
                <fullName>Aswathi Kumar</fullName>
            </value>
            <value>
                <fullName>Vivek Sharma</fullName>
            </value>
            <value>
                <fullName>Ruvaid Vani</fullName>
            </value>
            <value>
                <fullName>Pratyush Kumar Nayak</fullName>
            </value>
            <value>
                <fullName>Araba Aln’airat</fullName>
            </value>
            <value>
                <fullName>Mariia Aleksandrovskaia</fullName>
            </value>
            <value>
                <fullName>Yugeshkumar Sureshkumar</fullName>
            </value>
            <value>
                <fullName>Qingqin Yang</fullName>
            </value>
            <value>
                <fullName>Abdeldjalil Kamel Bensenada</fullName>
            </value>
            <value>
                <fullName>Kaisar Sabraimov</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>