force-app/main/default/objects/Time_Slot_For_Handover__c/fields/Customer_comments__c.field-meta.xml
<CustomField>
    <fullName>Customer_comments__c</fullName>
    <label>Customer comments</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Happy</fullName>
            </value>
            <value>
                <fullName>Unhappy</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>