force-app/main/default/objects/Time_Slot_For_Handover__c/fields/Is_Customer_Going_for_Mortgage__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer_Going_for_Mortgage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Customer Going for Mortgage</label>
    <type>Checkbox</type>
</CustomField>