force-app/main/default/objects/Time_Slot_For_Handover__c/fields/Not_Yet_Scheduled_Status_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Not_Yet_Scheduled_Status_Date_Time__c</fullName>
    <label>Not Yet Scheduled Status Date/Time</label>
    <type>DateTime</type>
</CustomField>