force-app/main/default/objects/Time_Slot_For_Handover__c/fields/Ok_From_Collection_For_Handover__c.field-meta.xml
<CustomField>
    <fullName>Ok_From_Collection_For_Handover__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ok From Collection For Handover</label>
    <type>Checkbox</type>
</CustomField>