force-app/main/default/objects/Time_Slot_For_Handover__c/fields/Paid_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Paid_Percentage__c</fullName>
    <formula>Booking__r.Paid_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>