force-app/main/default/objects/Time_Slot_For_Handover__c/fields/Pre_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Pre_Registration_Status__c</fullName>
    <formula>Text(Booking__r.Pre_Registration_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre-Registration Status</label>
    <type>Text</type>
</CustomField>