force-app/main/default/objects/Time_Slot_For_Handover__c/fields/Proposed_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Scheduled_Date__c</fullName>
    <label>Proposed Scheduled Date</label>
    <type>Date</type>
</CustomField>