force-app/main/default/objects/Time_Slot_For_Handover__c/fields/Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price__c</fullName>
    <formula>Booking__r.Agreement_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>