force-app/main/default/objects/Time_Slot_For_Handover__c/fields/QT_Keepout_Date__c.field-meta.xml
<CustomField>
    <fullName>QT_Keepout_Date__c</fullName>
    <label>QT Keepout Date</label>
    <type>Date</type>
</CustomField>