force-app/main/default/objects/Time_Slot_For_Handover__c/fields/Snags_identified__c.field-meta.xml
<CustomField>
    <fullName>Snags_identified__c</fullName>
    <label>Snags identified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>