force-app/main/default/objects/Time_Slot_For_Handover__c/fields/SPA_Status__c.field-meta.xml
<CustomField>
    <fullName>SPA_Status__c</fullName>
    <formula>TEXT(Booking__r.SPA_Executed__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPA Status</label>
    <type>Text</type>
</CustomField>