force-app/main/default/objects/Time_Slot_For_Handover__c/fields/Third_party_snagging__c.field-meta.xml
<CustomField>
    <fullName>Third_party_snagging__c</fullName>
    <label>Third party snagging</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>