force-app/main/default/objects/Time_Slot_For_Handover__c/fields/Timings__c.field-meta.xml
<CustomField>
    <fullName>Timings__c</fullName>
    <label>Timings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10 AM-11 AM</fullName>
            </value>
            <value>
                <fullName>11 AM-12 PM</fullName>
            </value>
            <value>
                <fullName>12 PM- 1 PM</fullName>
            </value>
            <value>
                <fullName>1 PM - 2 PM</fullName>
            </value>
            <value>
                <fullName>2 PM - 3 PM</fullName>
            </value>
            <value>
                <fullName>3 PM- 4 PM</fullName>
            </value>
            <value>
                <fullName>4 PM -5 PM</fullName>
            </value>
            <value>
                <fullName>5 PM - 6 PM</fullName>
            </value>
            <value>
                <fullName>6 PM - 7 PM</fullName>
            </value>
            <value>
                <fullName>7PM - 8 PM</fullName>
            </value>
            <value>
                <fullName>12:30 PM -2:30 PM</fullName>
                <isActive>false</isActive>
                <label>12:30 PM -2:30 PM</label>
            </value>
            <value>
                <fullName>4:00 PM - 6:00 PM</fullName>
                <isActive>false</isActive>
                <label>4:00 PM - 6:00 PM</label>
            </value>
            <value>
                <fullName>9 AM-11 AM</fullName>
                <isActive>false</isActive>
                <label>9 AM-11 AM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>