force-app/main/default/objects/Time_Slot_For_Handover__c/recordTypes/HandOver.recordType-meta.xml
<RecordType>
    <fullName>HandOver</fullName>
    <active>true</active>
    <label>HandOver</label>
</RecordType>