force-app/main/default/objects/Time_Slot_For_Handover__c/recordTypes/Home_Orientation.recordType-meta.xml
<RecordType>
    <fullName>Home_Orientation</fullName>
    <active>true</active>
    <label>Home Orientation</label>
</RecordType>