force-app/main/default/objects/Time_Slot_For_Handover__c/validationRules/QT_Keepout_Date_Not_Equal_to_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>QT_Keepout_Date_Not_Equal_to_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISNULL(QT_Keepout_Date__c), true,false  )</errorConditionFormula>
    <errorMessage>QT Keepout Date is not yet Scheduled</errorMessage>
</ValidationRule>