force-app/main/default/objects/Time_Slot_For_Handover__c/validationRules/SD_should_not_Lessthan_QT_Keepout_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>SD_should_not_Lessthan_QT_Keepout_Date</fullName>
    <active>true</active>
    <errorConditionFormula>If( QT_Keepout_Date__c &gt; Scheduled_Date__c ,true,false)</errorConditionFormula>
    <errorMessage>QT date is greater than Scheduled Date. Please change the Date</errorMessage>
</ValidationRule>