force-app/main/default/objects/Time_Slot_For_Handover__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Booking__c</columns>
    <columns>Booking_Status__c</columns>
    <columns>Unit_Number__c</columns>
    <columns>Tower__c</columns>
    <columns>Primary_Applicant_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>