force-app/main/default/objects/Time_Slot_For_Handover__c/listViews/Handover_List.listView-meta.xml
<ListView>
    <fullName>Handover_List</fullName>
    <columns>NAME</columns>
    <columns>Unit_Number__c</columns>
    <columns>Booking__c</columns>
    <columns>Paid_Percentage__c</columns>
    <columns>Email__c</columns>
    <columns>Status__c</columns>
    <columns>SPA_Status__c</columns>
    <columns>Booking_Status__c</columns>
    <columns>Applicant_email__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Time_Slot_For_Handover__c.HandOver</value>
    </filters>
    <label>Handover List</label>
</ListView>