force-app/main/default/objects/Time_Slot_For_Handover__c/listViews/Home_Orientation.listView-meta.xml
<ListView>
    <fullName>Home_Orientation</fullName>
    <columns>NAME</columns>
    <columns>Booking__c</columns>
    <columns>Booking_Status__c</columns>
    <columns>Unit_Number__c</columns>
    <columns>Tower__c</columns>
    <columns>Primary_Applicant_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Time_Slot_For_Handover__c.Home_Orientation</value>
    </filters>
    <label>Home_Orientation</label>
</ListView>